Resolved comment alignement issue after testing

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -79,7 +79,9 @@ body {
    color: #000000;
 }
 
-
+.comment{
+   text-align: center;
+}
 
 
 /* Media Queries */
